--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>exercise jake</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    test입니다<br>    
-    진짜로 될까요?
+    <nav>
+        <a href="/jake.html">jake</a> |
+        <a href="/conplet.html">conplet</a> |
+        <a href="/community.html">community</a>     
+    </nav>
 </body>
 </html>
